# todo-maker

./: Cargo.toml  Makefile  Readme.md
src/: main.rs
xbar_script/: todo.sh
