[package]
name = "todo-maker"
version = "0.1.0"
authors = ["j0nomar <jmarcelsw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
chrono = "0.4.19"
open = "1"

[[bin]]
name = "todo-maker"
path = "src/main.rs"